--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -46,7 +46,8 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${file.reference.sqljdbc4.jar}:\
-    ${libs.jstl.classpath}
+    ${libs.jstl.classpath}:\
+    ${libs.struts2lib-2-3-15.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
