product detail frontend

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -26,6 +26,8 @@
     <filter-mapping>
         <filter-name>struts2</filter-name>
         <url-pattern>/*</url-pattern>
+        <dispatcher>REQUEST</dispatcher>
+        <dispatcher>FORWARD</dispatcher>
     </filter-mapping>
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
