--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,6 +36,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.sqljdbc4.jar=web\\WEB-INF\\lib\\sqljdbc4.jar
+file.reference.struts2-json-plugin-2.3.15.jar=web\\WEB-INF\\lib\\struts2-json-plugin-2.3.15.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -47,7 +48,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.sqljdbc4.jar}:\
     ${libs.jstl.classpath}:\
-    ${libs.struts2lib-2-3-15.classpath}
+    ${libs.struts2lib-2-3-15.classpath}:\
+    ${file.reference.struts2-json-plugin-2.3.15.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
