--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,7 +36,9 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.sqljdbc4.jar=web\\WEB-INF\\lib\\sqljdbc4.jar
+file.reference.sqljdbc4.jar-1=..\\..\\PRJ321-Java Web Application\\JDBC Libra\\sqljdbc4.jar
 file.reference.struts2-json-plugin-2.3.15.jar=web\\WEB-INF\\lib\\struts2-json-plugin-2.3.15.jar
+file.reference.struts2-json-plugin-2.3.15.jar-1=..\\..\\PRJ321-Java Web Application\\JDBC Libra\\struts2-json-plugin-2.3.15.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -49,7 +51,9 @@ javac.classpath=\
     ${file.reference.sqljdbc4.jar}:\
     ${libs.jstl.classpath}:\
     ${libs.struts2lib-2-3-15.classpath}:\
-    ${file.reference.struts2-json-plugin-2.3.15.jar}
+    ${file.reference.struts2-json-plugin-2.3.15.jar}:\
+    ${file.reference.sqljdbc4.jar-1}:\
+    ${file.reference.struts2-json-plugin-2.3.15.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
